# napari-deeplabcut

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: plugin_preview.yml  test_and_deploy.yml
.napari/: DESCRIPTION.md
docs/: index.md
docs/release_notes/: v0_3_0_0.md
src/napari_deeplabcut/: __init__.py  _reader.py  _tracking_utils.py  _tracking_worker.py  _widgets.py  _writer.py  debug_test.py  keypoints.py  kmeans.py  misc.py  napari.yaml  test.py  widget_factory.py
src/napari_deeplabcut/_tests/: conftest.py  test_dock_widget.py  test_e2e.py  test_keypoints.py  test_misc.py  test_reader.py  test_sample_data.py  test_video_player.py  test_widget.py  test_widgets.py  test_writer.py
src/napari_deeplabcut/_tests/compat/: conftest.py  test_compat_integration.py  test_compat_internal.py
src/napari_deeplabcut/_tests/config/: test_keybinds.py
src/napari_deeplabcut/_tests/core/: test_config_sync.py  test_conflicts.py  test_dataframes.py  test_discovery.py  test_io.py  test_keypoints.py  test_layer_versioning.py  test_layers_metadata.py  test_metadata.py  test_paths.py  test_project_paths.py  test_provenance.py  test_reader_layerdata_contract.py  test_remap.py  test_sidecar.py  test_trails.py  test_writer_promotion.py
src/napari_deeplabcut/_tests/core/io/: test_form_df.py  test_hdf_reader.py  test_write_routing.py
src/napari_deeplabcut/_tests/core/layer_manager/: test_display_settings.py  test_layer_id.py  test_manager.py  test_registry.py
src/napari_deeplabcut/_tests/e2e/: conftest.py  test_e2e_misc.py  test_layer_coloring.py  test_overwrite_and_merge.py  test_points_layers.py  test_routing_and_provenance.py  test_save_e2e.py  test_trails_e2e.py  utils.py
src/napari_deeplabcut/_tests/tracking/: conftest.py  test_data.py  test_merge.py  test_models.py  test_refine.py  test_utils.py  test_widgets.py  test_worker.py
src/napari_deeplabcut/_tests/tracking/ui/: test_merge_ui.py  test_widgets.py
src/napari_deeplabcut/_tests/ui/: conftest.py  test_color_scheme.py  test_cropping.py  test_debug_window.py  test_dialogs.py  test_layer_stats.py  test_points_layers.py  test_qt_timers.py  test_save.py  test_singleton_widget.py  test_traj_plot.py  test_traj_select.py
src/napari_deeplabcut/_tests/utils/: test_debug.py  test_deprecation.py
src/napari_deeplabcut/assets/: superanimal_quadruped.json  superanimal_topviewmouse.json
src/napari_deeplabcut/config/: _autostart.py  keybinds.py  models.py  settings.py  supported_files.py  utils.py
src/napari_deeplabcut/core/: config_sync.py  conflicts.py  dataframes.py  discovery.py  errors.py  io.py  keypoints.py  layer_versioning.py  layers.py  metadata.py  paths.py  project_paths.py  provenance.py  remap.py  schemas.py  sidecar.py  trails.py
src/napari_deeplabcut/core/layer_lifecycle/: __init__.py  display_settings.py  identity.py  manager.py  merge.py  registry.py  spawn.py
src/napari_deeplabcut/core/schemas/: __init__.py  layer_identity.py
src/napari_deeplabcut/napari_compat/: __init__.py  color.py  points_layer.py
src/napari_deeplabcut/styles/: dark.mplstyle  light.mplstyle
src/napari_deeplabcut/tracking/: README.md  _data.py  _models.py  _widgets.py  _worker.py  tracking_worker.py
src/napari_deeplabcut/tracking/core/: data.py  merge.py  models.py  refine.py  utils.py
src/napari_deeplabcut/tracking/ui/: merger.py  worker.py
src/napari_deeplabcut/ui/: color_scheme_display.py  colors_and_dropdown.py  cropping.py  debug_window.py  dialogs.py  icons.py  labels_and_dropdown.py  layer_stats.py
src/napari_deeplabcut/ui/base_widget/: __init__.py  _qt_timers.py  singleton_widget.py
src/napari_deeplabcut/ui/plots/: plot_models.py  trajectory.py
src/napari_deeplabcut/ui/ui_dialogs/: save.py
src/napari_deeplabcut/utils/: debug.py  deprecations.py
tools/: launch_napari_debug.py
