[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.ruff]
lint.select = ["E", "F", "B", "I", "UP", "FA"]
lint.ignore = ["E741"]
target-version = "py310"
fix = true
line-length = 120

[tool.uv]
package = true

[tool.setuptools_scm]
write_to = "src/napari_deeplabcut/_version.py"

[tool.pytest.ini_options]
qt_api = "pyside6"
markers = [
    "e2e: end-to-end tests. Invoke napari viewer fixtures, slow.",
]
