[metadata]
name = napari-deeplabcut
description =napari + DeepLabCut annotation tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DeepLabCut/napari-deeplabcut
author = Team DeepLabCut, Lead by Jessy Lauer
author_email = admin@deeplabcut.org
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Visualization
project_urls =
    Bug Tracker = https://github.com/DeepLabCut/napari-deeplabcut/issues
    Documentation = https://github.com/DeepLabCut/napari-deeplabcut#README.md
    Source Code = https://github.com/DeepLabCut/napari-deeplabcut
    User Support = https://github.com/DeepLabCut/napari-deeplabcut/issues

[options]
packages = find:
install_requires =
    dask-image
    matplotlib>=3.3
    napari==0.4.18
    natsort
    numpy
    opencv-python-headless
    pandas
    pyyaml
    qtpy>=2.4
    scikit-image
    scipy
    tables
python_requires = >=3.9
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-deeplabcut = napari_deeplabcut:napari.yaml

[options.extras_require]
testing =
    pyside6==6.4.2
    pytest
    pytest-cov
    pytest-qt
    tox

[options.package_data]
napari_deeplabcut =
    napari.yaml
