[metadata]
name = napari-deeplabcut
description = napari + DeepLabCut annotation tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DeepLabCut/napari-deeplabcut
author = Team DeepLabCut, Lead by Jessy Lauer
author_email = admin@deeplabcut.org
license = LGPL-3.0
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Visualization
project_urls =
    Bug Tracker = https://github.com/DeepLabCut/napari-deeplabcut/issues
    Documentation = https://github.com/DeepLabCut/napari-deeplabcut#README.md
    Source Code = https://github.com/DeepLabCut/napari-deeplabcut
    User Support = https://github.com/DeepLabCut/napari-deeplabcut/issues

[options]
packages = find:
install_requires =
    dask-image
    matplotlib>=3.3
    napari==0.6.6
    natsort
    numpy
    opencv-python-headless
    pandas
    pyside6>=6.4.2
    pyyaml
    qtpy>=2.4
    scikit-image
    scipy
    tables
python_requires = >=3.10
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-deeplabcut = napari_deeplabcut:napari.yaml

[options.extras_require]
testing =
    pytest
    pytest-cov
    pytest-qt
    tox
tracking =
    torch

[options.package_data]
napari_deeplabcut =
    napari.yaml
